@@ -1,3 +1,12 @@
+2009-06-25 14:36 +0200  Rocco Rutte  <pdmef@gmx.net>  (e0ec1856e3f3)
+
+	* sendlib.c: Add Date: header to postponed messages
+
+2009-06-25 14:29 +0200  Rocco Rutte  <pdmef@gmx.net>  (64402a72e968)
+
+	* ChangeLog, sendlib.c: Only add Status: header (fcc/postpone) when
+	saving to mbox/mmdf
+
 2009-06-25 14:29 +0200  Rocco Rutte  <pdmef@gmx.net>  (bd0828adede8)
 
 	* compose.c: Treat messages written with <write-fcc> as fcc, not
